# projet_sudoku

./: .coverage  README.md  pyproject.toml
src/projet_sudoku/: affichage.py  generateur.py  main.py  py.typed  solver.py
src/projet_sudoku/tests/: test_solver.py  test_sudoku.py
tests/: test_generateur.py
