[project]
name = "projet-sudoku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anais Corbière", email = "anais.corbiere@etu.minesparis.psl.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pytest>=9.0.2",
]

[project.scripts]
projet_sudoku = "projet_sudoku.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "pytest>=7.4.0",
    "coverage>=7.4.0",
]
